# API-Bancaria-com-FastAPI

./: README.md
api_bancaria/: banco.db  pyproject.toml
api_bancaria/api_bancaria/: crud.py  database.py  main.py  models.py  schemas.py
api_bancaria/api_bancaria/endpoints/: auth.py  transacoes.py
